dynamics of the page correctly

--- a/style.scss
+++ b/style.scss
@@ -37,6 +37,7 @@
 @media screen and (max-width: 500px) {
     body {
         display: none;
+        // background-color: darkblue;
     }
     
 }
