--- a/css/style.css
+++ b/css/style.css
@@ -556,4 +556,107 @@
     border: none;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.521);
   }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .iconsfourthrowtablet {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2vw;
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .iconsfourthrowtablet .nodejs {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1vh;
+    border: 3px solid #507e81;
+    background-color: #080E2F;
+    border-radius: 10px;
+    border-radius: 50%;
+    padding: 2vh;
+    width: 13vw;
+    height: 13vw;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.521);
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .iconsfourthrowtablet .nodejs #nodejs {
+    margin: 0vh 0 0 0;
+    width: 6vw;
+    height: 7vw;
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .iconsfourthrowtablet .nodejs p {
+    color: white;
+    font-size: 2.5vw;
+    font-family: "Roboto", sans-serif;
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .iconsfourthrowtablet .django {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.4vh;
+    border: 3px solid #507e81;
+    background-color: #080E2F;
+    border-radius: 10px;
+    border-radius: 50%;
+    padding: 2vh;
+    width: 13vw;
+    height: 13vw;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.521);
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .iconsfourthrowtablet .django #django {
+    margin: 0vh 0 0 0;
+    width: 8vw;
+    height: 8vw;
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .iconsfourthrowtablet .django p {
+    color: white;
+    font-size: 2.5vw;
+    font-family: "Roboto", sans-serif;
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .iconsfourthrowtablet .laravel {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1vh;
+    border: 3px solid #507e81;
+    background-color: #080E2F;
+    border-radius: 10px;
+    border-radius: 50%;
+    padding: 2vh;
+    width: 13vw;
+    height: 13vw;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.521);
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .iconsfourthrowtablet .laravel #laravel {
+    margin: 0vh 0 0 0;
+    width: 6vw;
+    height: 6vw;
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .iconsfourthrowtablet .laravel p {
+    color: white;
+    font-size: 2.5vw;
+    font-family: "Roboto", sans-serif;
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .webframeworksdescription .serversidetitle {
+    width: 100%;
+    margin: 4vh 0 0 1vw;
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .webframeworksdescription .serversidetitle p {
+    font-family: "Julius Sans One", sans-serif;
+    font-size: 4vw;
+  }
+  * body #tabletcontainer #skillstabletcontainer #skillstablet .botskillstablet .webframeworksdivtablet .webframeworksdescription .underlinewebframeworksdiv .webframeworkslinetablet {
+    margin: 2vh 0 0 0vw;
+    width: 80vw;
+    height: 2vh;
+    background-color: #080E2F;
+    border: none;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.521);
+  }
 }/*# sourceMappingURL=style.css.map */
