--- a/css/style.scss
+++ b/css/style.scss
@@ -663,6 +663,123 @@ $lighterskills: #080e31;
                                     }
                                 }
                             }
+                            ////////////////////////
+                            ////////////////////////
+                            ////////////////////////
+                            ////////////////////////
+                            /// Web Frameworks
+                            .webframeworksdivtablet {
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: center;
+                                align-items: center;
+                                .iconsfourthrowtablet {
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    gap: 2vw;
+                                    .nodejs {
+                                        display: flex;
+                                        flex-direction: column;
+                                        justify-content: center;
+                                        align-items: center;
+                                        gap: 1vh;
+                                        border: 3px solid $skillsdarker2;
+                                        background-color: $mainblue;
+                                        border-radius: 10px;
+                                        border-radius: 50%;
+                                        padding: 2vh;
+                                        width: 13vw;
+                                        height: 13vw;
+                                        box-shadow: 2px 2px 3px $boxshadowcircles;
+                                        #nodejs {
+                                            margin: 0vh 0 0 0;
+                                            width: 6vw;
+                                            height: 7vw;
+                                        }
+                                        p {
+                                            color: white;
+                                            font-size: 2.5vw;
+                                            font-family: 'Roboto', sans-serif;
+                                        }
+                                    }
+                                    .django {
+                                        display: flex;
+                                        flex-direction: column;
+                                        justify-content: center;
+                                        align-items: center;
+                                        gap: .4vh;
+                                        border: 3px solid $skillsdarker2;
+                                        background-color: $mainblue;
+                                        border-radius: 10px;
+                                        border-radius: 50%;
+                                        padding: 2vh;
+                                        width: 13vw;
+                                        height: 13vw;
+                                        box-shadow: 2px 2px 3px $boxshadowcircles;
+                                        #django {
+                                            margin: 0vh 0 0 0;
+                                            width: 8vw;
+                                            height: 8vw;
+                                        }
+                                        p {
+                                            color: white;
+                                            font-size: 2.5vw;
+                                            font-family: 'Roboto', sans-serif;
+                                        }
+                                    }
+                                    .laravel {
+                                        display: flex;
+                                        flex-direction: column;
+                                        justify-content: center;
+                                        align-items: center;
+                                        gap: 1vh;
+                                        border: 3px solid $skillsdarker2;
+                                        background-color: $mainblue;
+                                        border-radius: 10px;
+                                        border-radius: 50%;
+                                        padding: 2vh;
+                                        width: 13vw;
+                                        height: 13vw;
+                                        box-shadow: 2px 2px 3px $boxshadowcircles;
+                                        #laravel {
+                                            margin: 0vh 0 0 0;
+                                            width: 6vw;
+                                            height: 6vw;
+                                        }
+                                        p {
+                                            color: white;
+                                            font-size: 2.5vw;
+                                            font-family: 'Roboto', sans-serif;
+                                        }
+                                    }
+                                }
+                                // Web Frameworks Description
+                                .webframeworksdescription {
+                                    .serversidetitle {
+                                        // background-color: yellow;
+                                        width: 100%;
+                                        // margin: 4vh 0 -6vh .5vw;
+                                        margin: 4vh 0 0 1vw;
+                                        p {
+                                            font-family: 'Julius Sans One', sans-serif;
+                                            font-size: 4vw;
+                                        }
+                                    }
+                                    // Titled underline
+                                    .underlinewebframeworksdiv {
+                                        .webframeworkslinetablet {
+                                            // margin: 8vh 2vw 0 0vw;
+                                            margin: 2vh 0 0 0vw;
+                                            width: 80vw;
+                                            height: 2vh;
+                                            background-color: $mainblue;
+                                            border: none;
+                                            box-shadow: 3px 3px 5px $boxshadowcircles;
+                                        }
+                                    }
+                                }
+                            }
                         }
                     }  
                 }
