--- a/css/style.scss
+++ b/css/style.scss
@@ -290,7 +290,7 @@ $lighterskills: #080e31;
                     #skillstablet {
                         background-color: $skillsteal;
                         color: white;
-                        height: 260vh;
+                        height: 215vh;
                         // Top of the skills section
                         .topskillstablet {
                             display: flex;
@@ -555,7 +555,7 @@ $lighterskills: #080e31;
                                 flex-direction: column;
                                 justify-content: center;
                                 align-items: center;
-                                margin: 2vh 0 0 0;
+                                margin: 0vh 0 0 0;
                             }
                             .iconsthirdrowtablet {
                                 display: flex;
@@ -758,7 +758,7 @@ $lighterskills: #080e31;
                                 .webframeworksdescription {
                                     .serversidetitle {
                                         // background-color: yellow;
-                                        width: 100%;
+                                        // width: 100%;
                                         // margin: 4vh 0 -6vh .5vw;
                                         margin: 4vh 0 0 1vw;
                                         p {
@@ -780,6 +780,229 @@ $lighterskills: #080e31;
                                     }
                                 }
                             }
+                            // DATABASE INTEGRATION DIV
+                            .databasedivtablet {
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: center;
+                                align-items: center;
+                                .iconsfifthrowtablet {
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    gap: 2vw;
+                                    .mongo {
+                                        display: flex;
+                                        flex-direction: column;
+                                        justify-content: center;
+                                        align-items: center;
+                                        gap: 1vh;
+                                        border: 3px solid $skillsdarker2;
+                                        background-color: $mainblue;
+                                        border-radius: 10px;
+                                        border-radius: 50%;
+                                        padding: 2vh;
+                                        width: 13vw;
+                                        height: 13vw;
+                                        box-shadow: 2px 2px 3px $boxshadowcircles;
+                                        #mongo {
+                                            margin: 0vh 0 0 0;
+                                            width: 3vw;
+                                            height: 8vw;
+                                        }
+                                        p {
+                                            color: white;
+                                            font-size: 2.5vw;
+                                            font-family: 'Roboto', sans-serif;
+                                        }
+                                    }
+                                    .firebase {
+                                        display: flex;
+                                        flex-direction: column;
+                                        justify-content: center;
+                                        align-items: center;
+                                        gap: 1vh;
+                                        border: 3px solid $skillsdarker2;
+                                        background-color: $mainblue;
+                                        border-radius: 10px;
+                                        border-radius: 50%;
+                                        padding: 2vh;
+                                        width: 13vw;
+                                        height: 13vw;
+                                        box-shadow: 2px 2px 3px $boxshadowcircles;
+                                        #firebase {
+                                            margin: -2vh 0 0 0;
+                                            width: 10vw;
+                                            height: 10vw;
+                                        }
+                                        p {
+                                            color: white;
+                                            font-size: 2.5vw;
+                                            font-family: 'Roboto', sans-serif;
+                                        }
+                                    }
+                                    .postgre {
+                                        display: flex;
+                                        flex-direction: column;
+                                        justify-content: center;
+                                        align-items: center;
+                                        gap: .5vh;
+                                        border: 3px solid $skillsdarker2;
+                                        background-color: $mainblue;
+                                        border-radius: 10px;
+                                        border-radius: 50%;
+                                        padding: 2vh;
+                                        width: 13vw;
+                                        height: 13vw;
+                                        box-shadow: 2px 2px 3px $boxshadowcircles;
+                                        #postgre {
+                                            margin: 0vh 0 0 0;
+                                            width: 8vw;
+                                            height: 7.5vw;
+                                        }
+                                        p {
+                                            color: white;
+                                            font-size: 2.5vw;
+                                            font-family: 'Roboto', sans-serif;
+                                        }
+                                    }
+                                }
+                                // Database Description and Underline
+                                .databasedescription {
+                                    .databasetitle {
+                                        // background-color: yellow;
+                                        // margin: 4vh 0 -4vh 34vw;
+                                        margin: 4vh 0 0 34vw;
+                                        p {
+                                            font-family: 'Julius Sans One', sans-serif;
+                                            font-size: 4vw;
+                                        }
+                                    }
+                                    // Titled underline
+                                    .underlinedatabasediv {
+                                        .databaselinetablet {
+                                            // margin: 6vh 2vw 0 0;
+                                            margin: 2vh 0 0 0;
+                                            width: 80vw;
+                                            height: 2vh;
+                                            background-color: $mainblue;
+                                            border: none;
+                                            box-shadow: 3px 3px 5px $boxshadowcircles;
+                                        }
+                                    }
+                                }
+                            }
+                            // DEPLOYMENT DIV
+                            .deploymentdivtablet {
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: center;
+                                align-items: center;
+                                .iconssixthrowtablet {
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    gap: 2vw;
+                                    .heroku {
+                                        display: flex;
+                                        flex-direction: column;
+                                        justify-content: center;
+                                        align-items: center;
+                                        gap: 1vh;
+                                        border: 3px solid $skillsdarker2;
+                                        background-color: $mainblue;
+                                        border-radius: 10px;
+                                        border-radius: 50%;
+                                        padding: 2vh;
+                                        width: 13vw;
+                                        height: 13vw;
+                                        box-shadow: 2px 2px 3px $boxshadowcircles;
+                                        #heroku {
+                                            width: 7vw;
+                                            height: 7vw;
+                                        }
+                                        p {
+                                            color: white;
+                                            font-size: 2.5vw;
+                                            font-family: 'Roboto', sans-serif;
+                                        }
+                                    }
+                                    .azureicon {
+                                        display: flex;
+                                        flex-direction: column;
+                                        justify-content: center;
+                                        align-items: center;
+                                        gap: 1vh;
+                                        border: 3px solid $skillsdarker2;
+                                        background-color: $mainblue;
+                                        // border-radius: 10px;
+                                        border-radius: 50%;
+                                        padding: 2vh;
+                                        width: 13vw;
+                                        height: 13vw;
+                                        box-shadow: 2px 2px 3px $boxshadowcircles;
+                                        #azureicon {
+                                            width: 6vw;
+                                            height: 6vw;
+                                        }
+                                        p {
+                                            color: white;
+                                            font-size: 2.5vw;
+                                            font-family: 'Roboto', sans-serif;
+                                            text-align: center;
+                                        }
+                                    }
+                                    .aws {
+                                        display: flex;
+                                        flex-direction: column;
+                                        justify-content: center;
+                                        align-items: center;
+                                        border: 3px solid $skillsdarker2;
+                                        background-color: $mainblue;
+                                        border-radius: 10px;
+                                        border-radius: 50%;
+                                        padding: 3vh;
+                                        width: 10vw;
+                                        height: 10vw;
+                                        gap: 1vh;
+                                        box-shadow: 2px 2px 3px $boxshadowcircles;
+                                        #aws {
+                                            width: 7vw;
+                                            height: 7vw;
+                                        }
+                                        p {
+                                            color: white;
+                                            font-size: 2.5vw;
+                                            font-family: 'Roboto', sans-serif;
+                                        }
+                                    }
+                                }
+                            }
+                            // Deployment Description
+                        .deploymentdescription {
+                            .deploymenttitle {
+                                // background-color: yellow;
+                                // width: 100%;
+                                // margin: -2.5vh 0 -6vh 1vw;
+                                margin: -3vh 0 0 0;
+                                p {
+                                    font-family: 'Julius Sans One', sans-serif;
+                                    font-size: 4vw;
+                                }
+                            }
+                            // Titled underline
+                            .underlinedeploymentdiv {
+                                .deploymentlinetablet {
+                                    // margin: 8vh 1vw 0 0;
+                                    margin: 2vh 0 0 0;
+                                    width: 80vw;
+                                    height: 2vh;
+                                    background-color: $mainblue;
+                                    border: none;
+                                    box-shadow: 3px 3px 5px $boxshadowcircles;
+                                }
+                            }
+                        }
                         }
                     }  
                 }
