--- a/css/style.scss
+++ b/css/style.scss
@@ -1010,71 +1010,71 @@ $lighterskills: #080e31;
                     }  
                 }
                 // PORTFOLIO SECTION
-                // #portfoliotabletcontainer {
-                //     #portfoliotabletdiv {
-                //         background-color: $mainblue;
-                //         color: white;
-                //         height: 105vh;
-                //         .topportfoliotablet {
-                //             display: flex;
-                //             .titlemobile {
-                //                 margin: 4vh 0 0 5vh;
-                //                 h1 {
-                //                     font-size: 10vw;
-                //                     font-family: 'Inter', sans-serif;
-                //                 }
-                //             }
-                //         }
-                //         .botportfoliomobile {
-                //             display: flex;
-                //             flex-direction: column;
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             ////////////////////// 
-                //             // APP ONE DESCRIPTION
-                //             // .app-1-description {
-                //             //     // position: fixed;
-                //             //     top: 0;
-                //             //     left: 100%;
-                //             //     width: 100%;
-                //             //     height: 100vh;
-                //             //     display: block;
-                //             //     background-color: $mainblue;
-                //             //     // background-color: yellowgreen;
-                //             //     margin: 4.5vh 0 0 0;
-                //             //     transition: ease-in .8s;
-                //             //     z-index: 98;
-                //             // }
-                //         }
-                //     }
-                // }
+                #portfoliotabletcontainer {
+                    #portfoliotabletdiv {
+                        background-color: $mainblue;
+                        color: white;
+                        height: 105vh;
+                        .topportfoliotablet {
+                            display: flex;
+                            .titlemobile {
+                                margin: 4vh 0 0 5vh;
+                                h1 {
+                                    font-size: 10vw;
+                                    font-family: 'Inter', sans-serif;
+                                }
+                            }
+                        }
+                        .botportfoliomobile {
+                            display: flex;
+                            flex-direction: column;
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            ////////////////////// 
+                            // APP ONE DESCRIPTION
+                            // .app-1-description {
+                            //     // position: fixed;
+                            //     top: 0;
+                            //     left: 100%;
+                            //     width: 100%;
+                            //     height: 100vh;
+                            //     display: block;
+                            //     background-color: $mainblue;
+                            //     // background-color: yellowgreen;
+                            //     margin: 4.5vh 0 0 0;
+                            //     transition: ease-in .8s;
+                            //     z-index: 98;
+                            // }
+                        }
+                    }
+                }
             }
         }
     }
